[package]
name = "ultrasql-sqllogictest-runner"
description = "SQLLogicTest-compatible runner for UltraSQL wire-protocol compatibility tests."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
md5 = { workspace = true }
ultrasql-server = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
