[package]
name        = "ultrasql-txn"
description = "UltraSQL transaction manager: begin/commit/abort, lock manager, deadlock detector."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core    = { workspace = true }
ultrasql-mvcc    = { workspace = true }
ultrasql-storage = { workspace = true }
ultrasql-wal     = { workspace = true }
thiserror        = { workspace = true }
parking_lot      = { workspace = true }
crossbeam        = { workspace = true }
dashmap          = { workspace = true }
smallvec         = { workspace = true }
tracing          = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
tempfile  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "txn_advanced"
harness = false

[[bench]]
name    = "txn_v04"
harness = false
