[package]
name        = "ultrasql-vec"
description = "UltraSQL vectorized execution primitives: column vectors, batches, SIMD kernels."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core = { workspace = true }
thiserror     = { workspace = true }
smallvec      = { workspace = true }
ahash         = { workspace = true }
bytes         = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "kernels"
harness = false
