[package]
name        = "ultrasql-vec"
description = "UltraSQL vectorized execution primitives: column vectors, batches, SIMD kernels."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[features]
default = []

[dependencies]
ultrasql-core = { workspace = true }
thiserror     = { workspace = true }
smallvec      = { workspace = true }
ahash         = { workspace = true }
bytes         = { workspace = true }
cranelift-codegen  = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-jit      = { workspace = true }
cranelift-module   = { workspace = true }
cranelift-native   = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "kernels"
harness = false

[[bench]]
name = "filter_sum_10m"
harness = false
