[package]
name        = "ultrasql-wal"
description = "UltraSQL write-ahead log: append-only durability layer with group commit."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[features]
# Exposes test-only fault-injection seams (e.g. `WalWriter::force_fatal_for_test`)
# so downstream crates can deterministically simulate a dead WAL writer in their
# own tests without provoking a real filesystem fault. Off by default; enabled by
# dependents under `[dev-dependencies]`.
test-fault-injection = []

[dependencies]
ultrasql-core = { workspace = true }
thiserror     = { workspace = true }
parking_lot   = { workspace = true }
crossbeam     = { workspace = true }
crossbeam-queue = { workspace = true }
bytes         = { workspace = true }
byteorder     = { workspace = true }
crc32c        = { workspace = true }
tracing       = { workspace = true }
libc          = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
criterion = { workspace = true }
tempfile  = "3"

[[bench]]
name = "record"
harness = false
